--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 
-<title>Wealth Central Reporting</title>
+<title>Reporting</title>
 
 <!-- Load initial styles/js for non-grid work -->
 <link rel="stylesheet" type="text/css" href="css/slickgrid/slick.grid.css" media="screen" charset="utf-8" />
